Updating openapi and readme
